final working site, bonus etc.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8-Bit Arcade Homepage</title>
+    <title>ODIOUSCHIPMUNK</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
         
         <!-- Header -->
         <header class="header">
-            <h1 class="title">SPRING ARCADE</h1>
-            <div class="subtitle">🌸 Bloom into Adventure 🌸</div>
+            <h1 class="title">ODIOUSCHIPMUNK'S WEBSITE</h1>
+            <div class="subtitle">Live</div>
         </header>
         
         <!-- Avatar Section -->
@@ -47,6 +47,11 @@
             <div class="arcade-button" onclick="navigateToPage('credits')">
                 <div class="button-icon">★</div>
                 <div class="button-text">CREDITS</div>
+                <div class="button-glow"></div>
+            </div>
+            <div class="arcade-button" onclick="navigateToPage('contact')">
+                <div class="button-icon">♥</div>
+                <div class="button-text">CONTACT</div>
                 <div class="button-glow"></div>
             </div>
         </nav>
