--- a/squash-analysis.html
+++ b/squash-analysis.html
@@ -26,6 +26,13 @@
             </button>
         </header>
         
+        <!-- Share Video Section -->
+        <section class="share-video-section">
+            <button class="share-video-btn-center" onclick="openVideoShare()">
+                📤 Share Your Video for AI Analysis
+            </button>
+        </section>
+        
         <!-- Video Comparison Section -->
         <section class="video-comparison">
             <div class="video-header">
